fix(obsidian/annot-view): fix annot comment styling fix annot comment padding not align with excerpt fix template preview and annot comment cannot be selected

--- a/app/obsidian/src/main.less
+++ b/app/obsidian/src/main.less
@@ -9,3 +9,6 @@
     border-bottom: none;
   }
 }
+.workspace-leaf-content[data-type="zotero-template-preview"] pre {
+  user-select: text;
+}
